# order-matching-engine

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  setup.rs
migrations/2025-01-15-175043_create_orders_table/: up.sql
scripts/: clean.ps1  dev.bat  dev.ps1  dev.sh  reset-db.bat  reset-db.ps1  reset-db.sh  troubleshoot.bat  troubleshoot.ps1  troubleshoot.sh
src/: main.rs
src/config/: config.rs
src/db/: pool.rs  schema.rs
src/domain/: mod.rs  order.rs
src/errors/: custom_error.rs
src/matching_engine/: engine.rs  mod.rs  orderbook.rs
src/matching_engine/types/: decimal.rs  mod.rs  order.rs
src/repository/: order_repository.rs
src/services/: order_service.rs
