[package]
name = "order-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
dotenv = "0.15"
config = "0.13"
deadpool-postgres = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
diesel = {version = "2.2.6", features = ["postgres"] }
tokio-postgres = "0.7.12"
once_cell = "1.20.2"



[dev-dependencies]
diesel_migrations = "2.2.0"
