[package]
name = "order-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = {version = "1.36.0", features = []}
rust_decimal_macros = "1.36"
dotenv = "0.15"
config = "0.13"
deadpool-postgres = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
diesel = {version = "2.2.6", features = ["postgres","uuid","numeric","chrono"] }
tokio-postgres = {version = "0.7.12", features = ["with-uuid-1", "with-serde_json-1","with-chrono-0_4"] }
once_cell = "1.20.2"
postgres-types = "0.2.8"
bytes = "1.9.0"

[dev-dependencies]
diesel_migrations = "2.2.0"
